--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 <hr> </hr>
 <ul>
-  <li><a href="/index.html";>Browse:</a></li>
-  <li><a href="/venmo.html">Check out</a></li>
+  <li><a href="index.html";>Browse:</a></li>
+  <li><a href="venmo.html">Check out</a></li>
 </ul>
 
 
