--- a/index.html
+++ b/index.html
@@ -14,46 +14,51 @@
 
 <div class = "row">
     <div class = "column">
-        <img src="collection-blank-tshirt.jpg" alt="funny t shirt" width="200" height="200" style="display:inline-block">
-        <p> funny t shirt #1</p>
+        <img src="tshirt\css1.png" alt="css shirt" width="400" height="400" style="display:inline-block">
+        <p> css shirt</p>
     </div>
     <div class = "column">
-        <img src="collection-blank-tshirt.jpg" alt="funny t shirt" width="200" height="200" style="display:inline-block">
-        <p> funny t shirt #2</p>
-    </div>
-    <div class = "column">
-        <img src="collection-blank-tshirt.jpg" alt="funny t shirt" width="200" height="200" style="display:inline-block">
-        <p> funny t shirt #3</p>
+        <img src="tshirt\css2.png" alt="css shirt back" width="400" height="400" style="display:inline-block">
+        <p> css shirt back</p>
     </div>
 </div>
 
 <div class = "row">
     <div class = "column">
-        <img src="collection-blank-tshirt.jpg" alt="funny t shirt" width="200" height="200" style="display:inline-block">
-        <p> funny t shirt #1</p>
+        <img src="tshirt\eng1.png" alt="engineer bro" width="400" height="400" style="display:inline-block">
+        <p> engineer bro</p>
     </div>
     <div class = "column">
-        <img src="collection-blank-tshirt.jpg" alt="funny t shirt" width="200" height="200" style="display:inline-block">
-        <p> funny t shirt #2</p>
-    </div>
-    <div class = "column">
-        <img src="collection-blank-tshirt.jpg" alt="funny t shirt" width="200" height="200" style="display:inline-block">
-        <p> funny t shirt #3</p>
+        <img src="tshirt\eng2.png" alt="engineer bro back" width="400" height="400" style="display:inline-block">
+        <p> engineer bro back</p>
     </div>
 </div>
 
 <div class = "row">
     <div class = "column">
-        <img src="collection-blank-tshirt.jpg" alt="funny t shirt" width="200" height="200" style="display:inline-block">
-        <p> funny t shirt #1</p>
+        <img src="tshirt\lat1.png" alt="TeX back" width="400" height="400" style="display:inline-block">
+        <p> TeX back</p>
+    </div>
+    </div>
+
+<div class = "row">
+    <div class = "column">
+        <img src="tshirt\ph1.png" alt="physics" width="400" height="400" style="display:inline-block">
+        <p> physics</p>
     </div>
     <div class = "column">
-        <img src="collection-blank-tshirt.jpg" alt="funny t shirt" width="200" height="200" style="display:inline-block">
-        <p> funny t shirt #2</p>
+        <img src="tshirt\ph2.png" alt="physics back" width="400" height="400" style="display:inline-block">
+        <p> physics back</p>
+    </div>
+
+    <div class = "row">
+    <div class = "column">
+        <img src="tshirt\re1.png" alt="RA" width="400" height="400" style="display:inline-block">
+        <p> RA</p>
     </div>
     <div class = "column">
-        <img src="collection-blank-tshirt.jpg" alt="funny t shirt" width="200" height="200" style="display:inline-block">
-        <p> funny t shirt #3</p>
+        <img src="tshirt\re2.png" alt="RA back" width="400" height="400" style="display:inline-block">
+        <p> RA back</p>
     </div>
 </div>
 
