--- a/venmo.html
+++ b/venmo.html
@@ -10,7 +10,20 @@
 
 <body>
 <h1> Check-Out </h1>
-<h2> Coming soon. Venmo us at xxx-xxxx for request. </h2>
+<h2> Please send me a private message at @tfmollano@gmail.com (within working hours 9-5) for your t-shirt order.</h2>
+
+   <h2>Following format is preferred.</h2>
+
+<h2> Subject: (TShirt):(Size):(Name) </h2>
+
+  <h2> Message: Content (if you'd like...)</h2>
+
+  <h2>We will do our best to have the t-shirts in stock in the next two weeks. After that point, in order to claim them, please venmo at
+  at @theom45. Instructions will be clear then. </h2?>
+
+    <h2> Thanks ~theo/maruf </h2>
+
+
 
 </body>
 </html>
