--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="style.css">
 
 <ul>
-  <li><a href="index.html";>Browse:</a></li>
+  <li><a href="index.html">Browse:</a></li>
   <li><a href="venmo.html">Check out</a></li>
 </ul>
 
