--- a/venmo.html
+++ b/venmo.html
@@ -10,7 +10,7 @@
 
 <body>
 <h1> Check-Out </h1>
-<h2> Please send me a private message at @tfmollano@gmail.com (within working hours 9-5) for your t-shirt order.</h2>
+<h2> Please send me a private message at @xxxxxx (within working hours 9-5) for your t-shirt order.</h2>
 
    <h2>Following format is preferred.</h2>
 
