--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <h1> Williams Ink T-Shirts </h1>
-<h2> Browse our current selection below: </h2>
+<h2> <i> Browse our current selection below: </i> </h2>
 
 <div class = "row">
     <div class = "column">
